@@ -64,6 +64,7 @@ t/boilerplate.t
 t/fiction/data/docbook/sections-a-href.docbook.xml
 t/fiction/data/docbook/sections-and-paras.docbook.xml
 t/fiction/data/docbook/sections-p-b-i-comments.docbook.xml
+t/fiction/data/docbook/with-blockquote.docbook.xml
 t/fiction/data/docbook/with-internal-description.docbook.xml
 t/fiction/data/docbook/with-ul-ol-li.docbook.xml
 t/fiction/data/proto-text/dialogue-with-several-paragraphs.txt
@@ -81,6 +82,7 @@ t/fiction/data/proto-text/sections-and-paras.txt
 t/fiction/data/proto-text/sections-p-b-i-comments.txt
 t/fiction/data/proto-text/sections-p-b-i.txt
 t/fiction/data/proto-text/two-nested-s.txt
+t/fiction/data/proto-text/with-blockquote.txt
 t/fiction/data/proto-text/with-brs.txt
 t/fiction/data/proto-text/with-comments.txt
 t/fiction/data/proto-text/with-description.txt
@@ -99,6 +101,7 @@ t/fiction/data/xml/sections-and-paras.xml
 t/fiction/data/xml/sections-p-b-i-comments.xml
 t/fiction/data/xml/sections-p-b-i.xml
 t/fiction/data/xml/two-nested-s.xml
+t/fiction/data/xml/with-blockquote.xml
 t/fiction/data/xml/with-brs.xml
 t/fiction/data/xml/with-comments.xml
 t/fiction/data/xml/with-description.xml
