@@ -2,6 +2,7 @@ Revision history for XML-Grammar-Fiction.
 
     * Updated some of the bug report URLs to read "XML-Grammar-Fiction"
     instead of "XML-Grammar-Screenplay".
+    * Add support for the <blockquote> tag to Fiction-XML / Fiction-Text.
 
 0.3.0       Tue May 17 22:59:17 IDT 2011
     * Add extradata/screenplay-xml-to-tei.xslt and 
